--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'//悬浮按钮 https://github.com/idisfkj/FloatingActionButton
+    compile 'com.getbase:floatingactionbutton:1.10.1'
 }
