--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.bigkoo:convenientbanner:2.0.5'
+    compile 'com.youth.banner:banner:1.4.9'  //最新版本
+    compile "com.github.bumptech.glide:glide:3.7.0"
 
 
 }
